...
import org.mozilla.tryfox.ui.composables.ProjectSelector
import org.mozilla.tryfox.ui.models.PushUiModel

// Project name mappings
private val projectDisplayToActualMap = mapOf(
    "try" to "try",
    "central" to "mozilla-central",
    "beta" to "mozilla-beta",
    "release" to "mozilla-release",
)

internal const val TREEHERDER_LOADING_STATE_TAG = "treeherder_loading_state"
internal const val TREEHERDER_SEARCH_HISTORY_TAG = "treeherder_search_history"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun SearchScreen(
    tryFoxViewModel: TryFoxViewModel,
    deepLinkProject: String?,
...
