...
                OutlinedTextField(
                    value = email,
                    onValueChange = onEmailChange,
                    label = { Text(stringResource(id = R.string.profile_screen_user_email_label)) },
                    modifier = Modifier
                        .weight(1f)
                        .testTag("profile_email_input"),
                    singleLine = true,
                    shape = RoundedCornerShape(topStart = 8.dp, bottomStart = 8.dp, topEnd = 0.dp, bottomEnd = 0.dp),
                    trailingIcon = {
                        if (email.isNotEmpty()) {
                            IconButton(
                                onClick = { onEmailChange("") },
                                modifier = Modifier.testTag("profile_email_clear_button")
                            ) {
                                Icon(
                                    imageVector = Icons.Filled.Close,
                                    contentDescription = stringResource(id = R.string.profile_screen_clear_email_description)
                                )
                            }
...
