<resources>
    <string name="app_name">TryFox</string>
    <string name="home_search_treeherder_button_description">Search builds</string>
    <string name="home_history_button_description">History</string>
    <string name="home_settings_button_description">Settings</string>
    <string name="search_history_title">Recent searches</string>
    <string name="home_scan_qr_code_button_description">Scan QR code</string>
    <string name="home_receive_from_desktop_button_description">Receive from desktop</string>
    <string name="home_fetching_nightly_builds">Fetching latest nightly builds...</string>
    <string name="home_loading_initial_data">Loading initial app data...</string> <!-- Added -->
    <string name="home_app_title_fenix">Firefox Android</string>
    <string name="home_app_subtitle_fenix">Fenix</string>
...
